[gd_scene load_steps=15 format=2]

[ext_resource path="res://Squad/ShipSquadron.gd" type="Script" id=1]
[ext_resource path="res://art/Squadron Sprites 2/sprite_4.png" type="Texture" id=2]
[ext_resource path="res://art/Squadron Sprites 2/sprite_2.png" type="Texture" id=3]
[ext_resource path="res://art/Squadron Sprites 2/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://art/Squadron Sprites 2/sprite_1.png" type="Texture" id=5]
[ext_resource path="res://art/Squadron Sprites 2/sprite_3.png" type="Texture" id=6]
[ext_resource path="res://art/Squadron Sprites 2/sprite_5.png" type="Texture" id=7]
[ext_resource path="res://Miscellaneous/Detection Area.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/basic_font2.tres" type="DynamicFont" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "squadron_basic",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "squadron_clicked",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]
script/source = "extends AnimatedSprite


	
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.15, 31.3493 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.105882, 0.764706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="Squadron" type="Area2D" groups=[
"squad_group",
]]
pause_mode = 1
position = Vector2( 134, 76.75 )
script = ExtResource( 1 )
detector_scene = ExtResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0883942, 0 )
frames = SubResource( 1 )
animation = "squadron_clicked"
script = SubResource( 2 )

[node name="IslandCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
show_behind_parent = true
anchor_left = -20.0
anchor_top = -20.0
anchor_bottom = 20.0
margin_left = -20.0
margin_top = -22.0
margin_right = 20.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -31.0
margin_top = 34.0
margin_right = 31.0
margin_bottom = 41.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PopupHealth" type="Popup" parent="."]
visible = true
margin_left = 27.0
margin_top = -30.0
margin_right = 127.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthText" type="RichTextLabel" parent="PopupHealth"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.59619
margin_top = -0.176773
margin_right = 4.59619
margin_bottom = -0.176773
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 0.737255, 0.145098, 0.145098, 1 )
text = "-10"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupConditions" type="Popup" parent="."]
visible = true
margin_left = 31.0
margin_top = -1.0
margin_right = 168.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionText" type="RichTextLabel" parent="PopupConditions"]
anchor_top = 0.0121915
anchor_right = 1.0
anchor_bottom = 1.01219
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 0.603922, 0.145098, 0.666667, 1 )
text = "Armor"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Condition Popup" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Squadron_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="Condition Popup" to="." method="_on_Condition_Popup_timeout"]
